BC et OF refactoring